Data Set Correction

--- a/HW4 - Best Parameters/IE 582 Homework 4 - Churn Data Set.ipynb
+++ b/HW4 - Best Parameters/IE 582 Homework 4 - Churn Data Set.ipynb
@@ -37,6 +37,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Content\n",
+    "Each row represents a customer, each column contains customer’s attributes described on the column Metadata.\n",
+    "\n",
+    "The data set includes information about:\n",
+    "\n",
+    "Customers who left within the last month – the column is called Churn\n",
+    "Services that each customer has signed up for – phone, multiple lines, internet, online security, online backup, device protection, tech support, and streaming TV and movies\n",
+    "Customer account information – how long they’ve been a customer, contract, payment method, paperless billing, monthly charges, and total charges\n",
+    "Demographic info about customers – gender, age range, and if they have partners and dependents"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task\n",
+    "\"Predict behavior to retain customers by analyzing all relevant customer data in the data set."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
